--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ts-template-with-jest-tests",
+  "name": "mars-rover-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc  --project tsconfig.build.json",
     "start": "nodemon src/index.ts",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
